--- a/src/App.css
+++ b/src/App.css
@@ -7,32 +7,98 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.input-place{
+  width: 400px;
+  height: 45px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.input-area{
+  display: flex;
+  flex-direction: row;
+  margin: 5px auto;
+  justify-content: center;
+}
+.task{
+  background-color: #bfe6d8;
+  width: 400px;
+  height: 100%;
+  min-height: 50px;
+  max-height: 90px;
+  margin: 5px;
+  color: midnightblue;
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+  padding: 0 10px;
+}
+.task:hover{
+  background-color: #98b5a8;
+}
+.task div{
+  word-wrap: break-word; /* Для старых браузеров */
+  overflow-wrap: break-word; /* Новый стандарт */
+  white-space: normal; /* Позволяет перенос строк */
+  max-width: 300px;
+}
+.task-list{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.is-checked{
+  text-decoration: line-through;
+}
+.checkbox {
+  appearance: none; /* Убираем стандартный вид чекбокса */
+  width: 25px;
+  height: 25px;
+  border: 2px solid gray;
+  border-radius: 4px;
+  cursor: pointer;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.checkbox:checked {
+  background-color: #6293dc; /* Цвет при нажатии */
+  border-color: #2e4c68;
+}
+
+.checkbox:checked::after {
+  content: "✔️"; /* Галочка */
+  color: #bfe6d8;
+  font-size: 16px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.delete-btn{
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  height: 100%;
+  min-height: 50px;
+  max-height: 90px;
+  font-size: 30px;
+}
+.task-area{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
