--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  font-family: 'system-ui';
+  font-weight: 100;
 }
 
 .App-logo {
@@ -8,15 +10,23 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #d5d5d5;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.App-header p{
+  margin: 0;
+  padding: 0;
+}
+.head-intro{
+  font-size: 3em;
+  color: #75277a;
+}
 .input-place{
-  width: 400px;
+  width: 570px;
   height: 45px;
   font-family: "PT Sans", sans-serif;
   font-size: 30px;
@@ -27,24 +37,28 @@
 .input-area{
   display: flex;
   flex-direction: row;
-  margin: 5px auto;
+  margin: 0 auto;
   justify-content: center;
 }
+.input-area input::placeholder{
+  opacity: 0.5;
+  font-style: italic;
+}
 .task{
-  background-color: #bfe6d8;
-  width: 400px;
+  background-color: #ffffff;
+  width: 570px;
   height: 100%;
   min-height: 50px;
   max-height: 90px;
   margin: 5px;
-  color: midnightblue;
+  color: #2b2b2b;
   display: flex;
   align-items: center;
-  border-radius: 4px;
   padding: 0 10px;
+  border: 1px solid #d5d5d5;
 }
 .task:hover{
-  background-color: #98b5a8;
+  background-color: #f1f1f1;
 }
 .task div{
   word-wrap: break-word; /* Для старых браузеров */
@@ -60,25 +74,28 @@
 }
 .is-checked{
   text-decoration: line-through;
+  color: #9e9e9e;
 }
 .checkbox {
   appearance: none; /* Убираем стандартный вид чекбокса */
-  width: 25px;
-  height: 25px;
-  border: 2px solid gray;
-  border-radius: 4px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #bfbfbf;
+  background-color: white;
+  border-radius: 30px;
   cursor: pointer;
   position: relative;
 }
 
 .checkbox:checked {
-  background-color: #6293dc; /* Цвет при нажатии */
-  border-color: #2e4c68;
+  background-color: #ffffff; /* Цвет при нажатии */
+  border-color: #35faa8;
 }
 
 .checkbox:checked::after {
   content: "✔️"; /* Галочка */
-  color: #bfe6d8;
+  color: #35faa8;
+  border-color: #35faa8;
   font-size: 16px;
   position: absolute;
   top: 50%;
@@ -101,4 +118,38 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+.todo-area{
+  display: flex;
+  background-color: white;
+  color: black;
+;
+  box-shadow: #b9b9b9 0 9px 10px 4px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.btn-active button{
+  border: 1px solid #ffffff;
+  font-size: 0.4em;
+  margin: 5px 5px;
+  padding: 5px;
+  color: #424242;
+  background-color: white;
+}
+.btn-active button:active{
+  border: 1px solid #090909;
+}
+.btn-active{
+  display: flex;
+}
+.footer{
+  display: flex;
+  flex-direction:row;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  background-color: #ffffff;
+  color: #b5b5b5;
 }
